<?xml version="1.0" encoding="utf-8"?>
<!-- Detail Layout for Grid -->
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:background="@drawable/scrim_gradient"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
    android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
    android:paddingRight="@dimen/forecast_detail_horizontal_padding"
    android:paddingStart="@dimen/forecast_detail_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    app:columnCount="3">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_humidity"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:contentDescription="@string/humidity_icon" />
    <TextView
        android:id="@+id/detail_humidity_label_textview"
        style="@style/detailExtraTitle"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/detail_humidity_textview"
        style="@style/detailExtraHeadine"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        tools:text="38%" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pressure"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:contentDescription="@string/pressure_icon"/>
    <TextView
        android:id="@+id/detail_pressure_label_textview"
        style="@style/detailExtraTitle"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:text="@string/pressure" />
    <TextView
        android:id="@+id/detail_pressure_textview"
        style="@style/detailExtraHeadine"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        tools:text="995 hPa" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wind"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:contentDescription="@string/wind_icon"/>
    <TextView
        android:id="@+id/detail_wind_label_textview"
        style="@style/detailExtraTitle"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        android:text="@string/wind" />
    <TextView
        android:id="@+id/detail_wind_textview"
        style="@style/detailExtraHeadine"
        android:gravity="fill"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1"
        tools:text="4km/h NW" />
</android.support.v7.widget.GridLayout>