<?xml version="1.0" encoding="utf-8"?>
<!-- Master layout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@drawable/landscape"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent">

        <include
            layout="@layout/detail_today_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp" />

    </FrameLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/scrim_gradient"
        android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
        app:columnCount="3">

        <android.support.v4.widget.Space
            app:layout_columnSpan="3"
            app:layout_rowWeight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/humidity_icon"
            android:src="@drawable/ic_humidity"
            app:layout_gravity="center_vertical"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_humidity_label_textview"
            style="@style/fragmentDetailWideTitle"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/detail_humidity_textview"
            style="@style/fragmentDetailWideHeadine"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="38%"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pressure_icon"
            android:src="@drawable/ic_pressure"
            app:layout_gravity="center_vertical"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_pressure_label_textview"
            style="@style/fragmentDetailWideTitle"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/detail_pressure_textview"
            style="@style/fragmentDetailWideHeadine"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="995 hPa" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wind_icon"
            android:src="@drawable/ic_wind"
            app:layout_gravity="center_vertical"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_wind_label_textview"
            style="@style/fragmentDetailWideTitle"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/detail_wind_textview"
            style="@style/fragmentDetailWideHeadine"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="4km/h NW" />

        <android.support.v4.widget.Space
            app:layout_columnSpan="3"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>
</LinearLayout>