<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portrait">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/col"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/appbar_gradient"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/primary_light"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_logo" />

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/cookie_regular"
                        android:gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/location_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_700"
                        android:textSize="24dp"/>
                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"
                    app:contentInsetStart="16dp"
                    app:layout_collapseMode="pin"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_forecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:stackFromEnd="true" />
        <!-- empty list -->
        <TextView
            android:id="@+id/forecast_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cookie_regular"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/empty_forecast_list"
            android:textSize="20dp" />
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
